Added FE fonts and colors

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -20,3 +20,83 @@ $yellow: #ffab00 !default;
 $green: #8bc34a !default;
 $teal: #009688 !default;
 $cyan: #00bcd4 !default;
+
+$lake-blue-100: #d4e3f1 !default;
+$lake-blue-200: #a9c6e3 !default;
+$lake-blue-300: #7daad6 !default;
+$lake-blue-400: #528dc8 !default;
+$lake-blue-500: #2771ba !default;
+$lake-blue-600: #1f5a95 !default;
+$lake-blue-700: #174470 !default;
+$lake-blue-800: #102d4a !default;
+$lake-blue-900: #081725 !default;
+
+$park-green-100: #e8f6d4 !default;
+$park-green-200: #d1edaa !default;
+$park-green-300: #bbe57f !default;
+$park-green-400: #a4dc55 !default;
+$park-green-500: #8dd32a !default;
+$park-green-600: #71a922 !default;
+$park-green-700: #557f19 !default;
+$park-green-800: #385411 !default;
+$park-green-900: #1c2a08 !default;
+
+$steel-gray-100: #d7d6d7 !default;
+$steel-gray-200: #afaeae !default;
+$steel-gray-300: #878586 !default;
+$steel-gray-400: #5f5d5d !default;
+$steel-gray-500: #373435 !default;
+$steel-gray-600: #2c2a2a !default;
+$steel-gray-700: #211f20 !default;
+$steel-gray-800: #161515 !default;
+$steel-gray-900: #0b0a0b !default;
+
+$river-teal-100: #ccf2f4 !default;
+$river-teal-200: #9ae4e9 !default;
+$river-teal-300: #67d7dd !default;
+$river-teal-400: #35c9d2 !default;
+$river-teal-500: #02bcc7 !default;
+$river-teal-600: #02969f !default;
+$river-teal-700: #017177 !default;
+$river-teal-800: #014b50 !default;
+$river-teal-900: #002628 !default;
+
+$sunshine-yellow-100: #fdf7d1 !default;
+$sunshine-yellow-200: #fcefa3 !default;
+$sunshine-yellow-300: #fae676 !default;
+$sunshine-yellow-400: #f9de48 !default;
+$sunshine-yellow-500: #f7d61a !default;
+$sunshine-yellow-600: #c6ab15 !default;
+$sunshine-yellow-700: #948010 !default;
+$sunshine-yellow-800: #63560a !default;
+$sunshine-yellow-900: #312b05 !default;
+
+$fall-orange-100: #fcded9 !default;
+$fall-orange-200: #fabdb3 !default;
+$fall-orange-300: #f79c8d !default;
+$fall-orange-400: #f57b67 !default;
+$fall-orange-500: #f25a41 !default;
+$fall-orange-600: #c24834 !default;
+$fall-orange-700: #913627 !default;
+$fall-orange-800: #61241a !default;
+$fall-orange-900: #30120d !default;
+
+$magical-magenta-100: #f3d2e2 !default;
+$magical-magenta-200: #e7a4c6 !default;
+$magical-magenta-300: #dc77a9 !default;
+$magical-magenta-400: #d0498d !default;
+$magical-magenta-500: #c41c70 !default;
+$magical-magenta-600: #9d165a !default;
+$magical-magenta-700: #761143 !default;
+$magical-magenta-800: #4e0b2d !default;
+$magical-magenta-900: #270616 !default;
+
+$pleasant-purple-100: #e9daf4 !default;
+$pleasant-purple-200: #d2b5e9 !default;
+$pleasant-purple-300: #bc8fdf !default;
+$pleasant-purple-400: #a56ad4 !default;
+$pleasant-purple-500: #8f45c9 !default;
+$pleasant-purple-600: #7237a1 !default;
+$pleasant-purple-700: #562979 !default;
+$pleasant-purple-800: #391c50 !default;
+$pleasant-purple-900: #1d0e28 !default;
