--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -10,14 +10,14 @@
 
 // Reassign color vars to semantic color scheme
 $theme-colors: (
-  primary: $purple,
-  secondary: $gray-600,
-  success: $green,
-  info: $cyan,
-  warning: $yellow,
-  danger: $red,
-  light: $gray-100,
-  dark: $gray-800,
+  primary: $steel-gray-500,
+  secondary: $steel-gray-600,
+  success: $park-green-500,
+  info: $river-teal-500,
+  warning: $sunshine-yellow-500,
+  danger: $magical-magenta-500,
+  light: $steel-gray-100,
+  dark: $steel-gray-800,
 ) !default;
 
 // Options
@@ -47,9 +47,9 @@ $container-max-widths: (
 // Settings for the `<body>` element.
 
 $body-bg: $white !default;
-$body-color: $gray-700 !default;
-$inverse-bg: $gray-900 !default;
-$inverse-color: $gray-600 !default;
+$body-color: $steel-gray-700 !default;
+$inverse-bg: $steel-gray-900 !default;
+$inverse-color: $steel-gray-600 !default;
 
 // Links
 //
