--- a/src/templates/dealer/style.scss
+++ b/src/templates/dealer/style.scss
@@ -2,13 +2,13 @@
 @import 'scss/fonts.scss';
 
 .article {
-  padding-bottom: 10px;
-  padding-top: 40px;
+  padding-bottom: 1rem;
+  padding-top: 2rem;
 
   .info {
     border-bottom: 1px solid $gray-200;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
     word-break: break-word;
 
     h1 {
@@ -23,25 +23,26 @@
       color: $gray-500;
       display: inline;
       font-size: $font-size-xs;
-      margin-right: 10px;
+      margin-right: 1rem;
     }
   }
 
   .content {
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 
-    h2 {
-      margin-bottom: 20px;
-      padding-top: 10px;
+    h1, h2, h3, h4, h5, h6 {
+      margin-bottom: 1rem;
+      padding-top: 1rem;
+      text-align: center;
     }
 
     p {
-      margin: 20px 0;
+      margin: 1.2rem 0;
     }
 
     blockquote {
       background-color: $gray-100;
-      border-left: 5px solid $gray-200;
+      border-left: 0.5rem solid $gray-200;
       padding: 0.25em 1.5em;
 
       a {
