Removed a plugin that was messing with the cache and added purple as the secondary colour

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -11,7 +11,7 @@
 // Reassign color vars to semantic color scheme
 $theme-colors: (
   primary: $steel-gray-500,
-  secondary: $steel-gray-600,
+  secondary: $pleasant-purple-500,
   success: $park-green-500,
   info: $river-teal-500,
   warning: $sunshine-yellow-500,
