Still exploring icons for social media links

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -100,3 +100,20 @@ $pleasant-purple-600: #7237a1 !default;
 $pleasant-purple-700: #562979 !default;
 $pleasant-purple-800: #391c50 !default;
 $pleasant-purple-900: #1d0e28 !default;
+
+
+/* Brand colors from https://brandcolors.net/ */
+$behance: #1769ff !default;
+$deviantart: #181a1b !default;
+$discord: #7289da !default;
+$etsy: #d5641c !default;
+$facebook: #3b5998 !default;
+$github: #333333 !default;
+$instagram: #405de6 !default;
+$pinterest: #e60023 !default;
+$steam: #000000 !default;
+$telegram: #0088cc !default;
+$tumblr: #35465c !default;
+$twitch: #9146ff !default;
+$twitter: #1da1f2 !default;
+$youtube: #ff0000 !default;
