--- a/src/components/icon/style.scss
+++ b/src/components/icon/style.scss
@@ -1,22 +1,8 @@
-@import 'scss/colors.scss';
-@import 'scss/fonts.scss';
+@import '../../scss/colors.scss';
 
-.icon {
-  margin: 50px auto 0;
-  max-width: 400px;
-
-  svg {
-    font-size: $display4-size;
-    margin-bottom: 20px;
-
-    &[data-emergence='visible'] {
-      animation: bounceIn 2s;
-      opacity: 1;
-    }
-
-    &[data-emergence='hidden'] {
-      opacity: 0;
-    }
+.icon-container {
+  .icon {
+    color: $river-teal-700;
   }
 
   &:hover {
