--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -108,8 +108,10 @@ $deviantart: #181a1b !default;
 $discord: #7289da !default;
 $etsy: #d5641c !default;
 $facebook: #3b5998 !default;
+$furaffinity: #36566F !default;
 $github: #333333 !default;
 $instagram: #405de6 !default;
+$picarto: #1DA456 !default;
 $pinterest: #e60023 !default;
 $steam: #000000 !default;
 $telegram: #0088cc !default;
