--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -18,4 +18,10 @@
 
 .bg-image {
   background-image: url(../../content/images/moritz-mentges-unsplash.jpg);
+  
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
