--- a/src/components/cards/mock-shop-item-card/style.scss
+++ b/src/components/cards/mock-shop-item-card/style.scss
@@ -20,3 +20,12 @@ a.clickable-card {
     color: inherit;
   }
 }
+
+.rounded-card {
+  border-radius: 1rem;
+
+  .rounded-card-img, .rounded-card-img-top {
+    border-top-left-radius: calc(1rem - 1px);
+    border-top-right-radius: calc(1rem - 1px); 
+  }
+}
