--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -1,3 +1,7 @@
+
+
+
+
 // Colors
 //
 // Grayscale and brand colors for use across Bootstrap.
@@ -61,7 +65,33 @@ $link-hover-decoration: none !default;
 //
 @import './fonts.scss';
 
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import '../../node_modules/bootstrap/scss/utilities';
+
+$utilities: map-merge(
+  $utilities,
+  (
+    "rounded": map-merge(
+      map-get($utilities, "rounded"),
+      (
+        values: map-merge(
+          map-get(map-get($utilities, "rounded"), "values"),
+          (
+            null: 0.5rem,
+            0: 0,
+            1: 0.5rem,
+            2: 0.75rem,
+            3: 1rem
+          ),
+        ),
+      ),
+    ),
+  )
+);
+
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
 html,
 body {
