--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -29,8 +29,8 @@ $theme-colors: (
 // Quickly modify global styling by enabling or disabling optional features.
 $enable-rounded: true !default;
 $enable-shadows: true !default;
-$enable-gradients: false !default;
-$enable-transitions: false !default;
+$enable-gradients: true !default;
+$enable-transitions: true !default;
 $enable-hover-media-query: false !default;
 $enable-grid-classes: true !default;
 $enable-print-styles: true !default;
