--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -93,10 +93,27 @@ $utilities: map-merge(
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
-html,
-body {
+/* Global settings */
+
+html {
   height: 100%;
-  width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+#___gatsby #gatsby-focus-wrapper {
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.layout-container {
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 * {
