Blocking out the login UI is done!
After the changes I made to the layout, all I needed to do was play around with the margins and sizing on the card.

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -116,6 +116,31 @@ body {
   min-width: 100vw;
 }
 
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.bg-image {
+  background-image: url(../../content/images/moritz-mentges-unsplash.jpg);
+  
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
