Added FE's social media links to the footer

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -108,6 +108,7 @@ $deviantart: #181a1b !default;
 $discord: #7289da !default;
 $etsy: #d5641c !default;
 $facebook: #3b5998 !default;
+$flickr: #0063DC !default;
 $furaffinity: #36566F !default;
 $github: #333333 !default;
 $instagram: #405de6 !default;
