Last thing for today: ran pa11y, added some aria labels to the forms on the website, and took care of a pa11y error with the links being too light

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -58,6 +58,7 @@ $inverse-color: $steel-gray-600 !default;
 // Links
 //
 // Style anchor elements.
+$link-color: $lake-blue-900 !default;
 $link-decoration: none !default;
 $link-hover-decoration: none !default;
 
