Increased font weight on headings, added headings font to buttons, made the cards and buttons more like squircles, and copied the styles between the cards

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -106,7 +106,7 @@ $neon-yellow: #e0de21 !default;
 $neon-cyan: #21d8e0 !default;
 $neon-danger: #e04021 !default;
 
-$white:    #fff !default;
+$white:    #ffffff !default;
 $gray-100: $synth-midnight-100 !default;
 $gray-200: $synth-midnight-200 !default;
 $gray-300: $synth-midnight-300 !default;
@@ -116,7 +116,7 @@ $gray-600: $synth-midnight-600 !default;
 $gray-700: $synth-midnight-700 !default;
 $gray-800: $synth-midnight-800 !default;
 $gray-900: $synth-midnight-900 !default;
-$black:    #000 !default;
+$black:    #000000 !default;
 
 /* Brand colors from https://brandcolors.net/ */
 $behance: #1769ff !default;
