--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -11,8 +11,8 @@ $border-width:                5px !default;
 $border-color:                $primary !default;
 
 $border-radius:               1rem !default;
-$border-radius-lg:            .3rem !default;
-$border-radius-sm:            .2rem !default;
+$border-radius-lg:            1rem !default;
+$border-radius-sm:            1rem !default;
 
 $rounded-pill:                50rem !default;
 
