Increase base font weight, change body color to white, remove sign up page, add how-to and DJ pages, and add a basic Welcome page
* Changed the text card component a bit to better match the UI sketch
* Built a welcome page based on the UI sketch.

--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -3,4 +3,4 @@
 // Settings for the `<body>` element.
 
 $body-bg:                   $gray-900 !default;
-$body-color:                $gray-100 !default;
+$body-color:                $white !default;
