Set icons to use white instead of brand colors to aid readability, added Friday streaming times to dealer template, and moved feeling lucky and search bar sections on dealers index per igglypou's request

--- a/src/components/social-links/style.scss
+++ b/src/components/social-links/style.scss
@@ -13,71 +13,5 @@
     animation: pulse 1s;
   }
 
-  &.behance {
-    color: $behance;
-  }
-
-  &.deviantart {
-    color: $deviantart;
-  }
-
-  &.discord {
-    color: $discord;
-  }
-
-  &.etsy {
-    color: $etsy;
-  }
-
-  &.facebook {
-    color: $facebook;
-  }
-
-  &.flickr {
-    color: $flickr;
-  }
-
-  &.furaffinity {
-    color: $furaffinity;
-  }
-
-  &.github {
-    color: $github;
-  }
-
-  &.instagram {
-    color: $instagram;
-  }
-
-  &.picarto {
-    color: $picarto;
-  }
-
-  &.pinterest {
-    color: $pinterest;
-  }
-
-  &.steam {
-    color: $steam;
-  }
-
-  &.telegram {
-    color: $telegram;
-  }
-
-  &.tumblr {
-    color: $tumblr;
-  }
-
-  &.twitch {
-    color: $twitch;
-  }
-
-  &.twitter {
-    color: $twitter;
-  }
-
-  &.youtube {
-    color: $youtube;
-  }
+  color: $white;
 }
