Made a separate navbar and a separate layout for the event route, cleaned up the navbar styling, and added a "Go back" button to the login page if user is logged in
Added theme colors to navbar to match UI sketch, too.

--- a/src/scss/navs.scss
+++ b/src/scss/navs.scss
@@ -1,6 +1,11 @@
 @import './colors.scss';
 @import './tables.scss';
 
+$navbar-dark-color:                 $white !default;
+$navbar-dark-hover-color:           $secondary !default;
+$navbar-dark-active-color:          $secondary !default;
+$navbar-dark-disabled-color:        rgba($white, 0.75) !default;
+
 $nav-tabs-border-color:                       $table-border-color !default;
 $nav-tabs-link-hover-border-color:            $nav-tabs-border-color !default;
 $nav-tabs-link-active-color:                  $white !default;
