--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -286,6 +286,7 @@ legend {
     color: $white;
 
     &:hover {
+      color: $secondary;
       background-color: transparent;
     }
 
@@ -296,6 +297,7 @@ legend {
     }
 
     &.active {
+      color: $secondary;
       background-color: transparent;
     }
   }
@@ -319,6 +321,18 @@ legend {
     &.active {
       background-color: $primary;
     }
+  }
+}
+
+.navbar .navbar-brand img {
+  &:hover {
+    animation: pulse 0.5s;
+  }
+}
+
+.navbar {
+  .navbar-text {
+    color: $white;
   }
 }
 
