More stylistic changes and ran pa11y
* Updated URLs and ran pa11y again
* Unified the styles for the cards
* Added a pass-through className prop for the Section component
* Added Marty to the 404 page!
* Added the background behind the Vimeo player that I put in the UI sketch

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -221,6 +221,14 @@ legend {
 
 //================================================================================================//
 
+// Jumbotrons
+
+.jumbotron {
+  border: 1px solid $gray-500;
+}
+
+//================================================================================================//
+
 // List Groups
 
 .list-group-item {
