--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -69,6 +69,14 @@ html {
   height: 100%;
 }
 
+body { 
+  background: url(../../content/images/bg_75dpi.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -216,6 +224,12 @@ legend {
   &:disabled,
   &[readonly] {
     border-color: transparent;
+  }
+}
+
+.form-floating {
+  label {
+    color: $primary;
   }
 }
 
