--- a/src/scss/input.scss
+++ b/src/scss/input.scss
@@ -10,9 +10,11 @@ $input-btn-padding-x:               1rem !default;
 // Forms
 
 $input-disabled-bg:                 $gray-400 !default;
-$input-border-color:                $white !default;
+$input-border-color:                $primary !default;
 $input-group-addon-color:           $white !default;
 $input-group-addon-bg:              $gray-700 !default;
 $input-group-addon-border-color:    transparent !default;
 $custom-file-color:                 $white !default;
 $custom-file-border-color:          $gray-700 !default;
+
+$form-label-color: $primary !default;
