Bugfix and reran pa11y
Bugfix: the form backgrounds were white, but the text was too! So, I turned the form backgrounds down to a darker color, and I turned the labels white as well.

I also reran pa11y for good measure.

--- a/src/scss/input.scss
+++ b/src/scss/input.scss
@@ -17,4 +17,6 @@ $input-group-addon-border-color:    transparent !default;
 $custom-file-color:                 $white !default;
 $custom-file-border-color:          $gray-700 !default;
 
-$form-label-color: $primary !default;
+$input-bg: $gray-800 !default;
+
+$form-label-color: $white !default;
