Add EST to lineup timetable

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -113,11 +113,11 @@ img {
 
 .alert {
   border: none;
-  color: $white;
+  color: $light;
 
   a,
   .alert-link {
-    color: $white;
+    color: $light;
     text-decoration: underline;
   }
 
