Add special layout when dealer has only one image and pastelize accent colours to meet WCAG2AA contrast level

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -99,12 +99,12 @@ $synth-midnight-700: #09123a !default;
 $synth-midnight-800: #060c26 !default;
 $synth-midnight-900: #030613 !default;
 
-$synth-sunset: #b821e0 !default;
-$neon-arizona-blue: #21e0cb !default;
-$neon-arizona-green: #21e06f !default;
-$neon-yellow: #e0de21 !default;
-$neon-cyan: #21d8e0 !default;
-$neon-danger: #e04021 !default;
+$synth-sunset: #e085fa !default;
+$neon-arizona-blue: #a1ddd6 !default;
+$neon-arizona-green: #85fab5 !default;
+$neon-yellow: #faf885 !default;
+$neon-cyan: #85f4fa !default;
+$neon-danger: #fa9885 !default;
 
 $white:    #ffffff !default;
 $gray-100: $synth-midnight-100 !default;
