fix a build error

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -137,7 +137,7 @@ img {
 // Background Images
 
 .bg-image {
-  background-image: url('../../content/images/bg.png');
+  background-image: url('../../content/images/bg_75dpi.png');
   
   height: 100%;
 
